[gd_scene load_steps=2 format=3 uid="uid://ctg8mwg4vby5g"]

[ext_resource type="Script" path="res://game_food/food.gd" id="1_wtmjl"]

[node name="Food" type="Area2D" groups=["food"]]
script = ExtResource("1_wtmjl")

[node name="NotEaten" type="Sprite2D" parent="."]

[node name="Eaten" type="Sprite2D" parent="."]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
